--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3-s2a3_expense-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
