fix: adjust package.json 2

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "3-s2a3_expense-tracker",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18"
+  },
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
