--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.1",
     "handlebars-helpers": "^0.10.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.13",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
